<resources>
    <string name="app_name">Sea Necio!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="accept">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="error_text">Ooopps, an error occurred</string>

    <string name="main_short_description">We will notify you when one of these phone numbers tries to call you.</string>

    <string name="report_number">Report</string>
    <string name="report_number_title">Report Phone number</string>
    <string name="report_confirmation">Thanks for the help!</string>

    <string name="report_phone_description">You can help others by reporting a phone number.\nAfter others report that same phone number for a couple of times, that phone number will be put live in the App</string>


    <string name="phone_number">Phone Number</string>
    <string name="description">Description(e.g. Central Bank)</string>
    <string name="use_last_phonecall">Use last phone call?</string>

    <string name="phone_number_required_text">Please add a phone number</string>
    <string name="description_required_text">Please add a description</string>
</resources>
