<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.greenpixels.seanecio.activities.ReportPhoneNumberActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:theme="@style/ToolbarTheme"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_phone_description"
        android:id="@+id/textView"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:layout_margin="20dp"
        android:layout_below="@+id/toolbar"/>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        card_view:cardCornerRadius="5dp"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:elevation="8dp">

        <LinearLayout
            android:id="@+id/contentView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_padding"
            android:paddingRight="@dimen/activity_horizontal_padding">

            <fr.castorflex.android.smoothprogressbar.SmoothProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:indeterminate="true"
                android:visibility="gone"
                app:spb_color="@color/colorAccent"
                app:spb_mirror_mode="false"
                app:spb_progressiveStart_activated="true"
                app:spb_progressiveStart_speed="1.5"
                app:spb_progressiveStop_speed="3.4"
                app:spb_reversed="false"
                app:spb_sections_count="4"
                app:spb_speed="2.0"
                app:spb_stroke_separator_length="4dp"
                app:spb_stroke_width="4dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/edittext_phonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:inputType="phone" />


            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/btnUseLastPhonecall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="5dp"
                android:text="@string/use_last_phonecall"
                android:textColor="@color/bodyTextColor"
                android:textSize="12sp" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/edittext_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btn_report_phonenumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/colorPrimaryDark"
                android:padding="12dp"
                android:text="@string/report_number"
                android:textColor="@color/white" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>